# Weather-Data-System

./: LICENSE  README.md  excercise.py  pyproject.toml
weather_data_system/: async_functions.py  cities.txt  database_models.py  database_utils.py  database_views.py  main.py
weather_data_system/examples/: weather_data_system_additional_information.ipynb
weather_data_system/tools/: mysql_backup.py
